force-app/main/default/objects/Product__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gadgets</fullName>
            </value>
            <value>
                <fullName>Appliances</fullName>
            </value>
            <value>
                <fullName>T-Shirt</fullName>
            </value>
            <value>
                <fullName>Shoes</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Hand-wash</fullName>
            </value>
            <value>
                <fullName>Face-wash</fullName>
            </value>
            <value>
                <fullName>Eye-Lash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>