force-app/main/default/objects/Product__c/fields/Reorder_Level__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Level__c</fullName>
    <label>Reorder Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>